--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-OPENAI_API_KEY="YOUR_OPENAI_API_KEY"
-uri="YOUR_MONGODB_URI"
-credentials_path="YOUR_CREDENTIALS_PATH"
-sheet_id="YOUR_SHEET_ID"
+OPENAI_API_KEY='OPENAI_API_KEY'
+uri='uri'
+credentials_path='x'
+sheet_id='sheet_id'
